/*
 * Copyright MapR Technologies, $year
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_generic_services = true;
option java_package = "com.mapr.franz.catcher.wire";
option java_outer_classname = "Catcher";

// gets a current list of servers
message Hello {
    optional uint64 clientId = 1;      // client id for logging
    optional string application = 2;  // application name for logging purposes
}

message HelloResponse {
    optional uint64 serverId = 1;
    repeated Host host = 2;
    repeated Server cluster = 3;
}

// sends a message to a topic
message LogMessage {
    optional uint64 clientId = 1;
    optional string topic = 2;
    optional bytes payload = 3;
    optional bool force = 4;
}

// the response includes one or more redirects for the next time
message LogMessageResponse {
    optional uint64 serverId = 1;
    optional bool successful = 2;
    optional string backTrace = 3;
    optional TopicMapping redirect = 4;
}

// signs off ... mostly for logging purposes
message Close {
    optional uint64 clientId = 1;
}

message CloseResponse {
    optional uint64 serverId = 1;
}

// message components
message TopicMapping {
    optional string topic = 1;
    optional Server server = 2;
}

message Server {
    optional uint64 serverId = 1;
    repeated Host host = 2;
}

message Host {
    optional string hostName = 2;
    optional uint32 port = 3;
}

// the service itself
service CatcherService {
    rpc hello(Hello) returns (HelloResponse);
    rpc log(LogMessage) returns (LogMessageResponse);
    rpc close(Close) returns (CloseResponse);
}
